--- a/web/angular-wallet/src/app/main/tokens/token-transfer/token-transfer-form/token-transfer-form.component.html
+++ b/web/angular-wallet/src/app/main/tokens/token-transfer/token-transfer-form/token-transfer-form.component.html
@@ -30,6 +30,7 @@
       [(message)]="message"
       [(isText)]="messageIsText"
       [(encrypt)]="encrypt"
+      [canEncrypt]="canEncrypt()"
     >
     </app-message-input>
   </ng-container>
