--- a/web/angular-wallet/src/app/main/send-money/send-multi-out-form/send-multi-out-form.component.html
+++ b/web/angular-wallet/src/app/main/send-money/send-multi-out-form/send-multi-out-form.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit($event)" #sendBurstForm="ngForm">
+<form (ngSubmit)="onSubmit($event)" #sendForm="ngForm">
 
   <div class="action-container">
     <mat-checkbox labelPosition="before"
