--- a/web/angular-wallet/src/app/main/transactions/transactions.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transactions.component.html
@@ -50,6 +50,16 @@
           <mat-datepicker #pickerTo></mat-datepicker>
         </mat-form-field>
       </div>
+      <div>
+        <mat-form-field class="search-form">
+          <mat-select [formControl]="recipientTypesField"
+                      placeholder="{{'address' | i18n}}"
+                      (selectionChange)="applyFilter()"
+          >
+            <mat-option *ngFor="let recipient of recipientTypeOptions" value="{{recipient.k}}">{{recipient.v.toLocaleUpperCase()  }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
       <button
         mat-button
         (click)="resetFilter()"
