--- a/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
@@ -69,7 +69,7 @@
     </mat-header-cell>
     <mat-cell *matCellDef="let transaction">
       <ng-container *ngIf="isOwnAccount(transaction.sender)">
-        <div *ngIf="!isMultiOutPayment(transaction) && !isSelf(transaction) && !transaction.recipient"
+        <div *ngIf="isBurn(transaction)"
              class="text-uppercase"
         >
           {{"burn_address" | i18n}}
