--- a/web/angular-wallet/src/app/main/set-account-info/src44-description-form/src44-description-form.component.html
+++ b/web/angular-wallet/src/app/main/set-account-info/src44-description-form/src44-description-form.component.html
@@ -1,13 +1,53 @@
-<div class="fullwidth position-relative" fxFlex="1 0 auto" fxLayout="column" fxLayoutAlign="start">
+<div class="fullwidth position-relative pt-8" fxFlex="1 0 auto" fxLayout="column" fxLayoutAlign="start"
+     [formGroup]="form">
+
+  <mat-radio-group class="mb-12" fxLayout="row" fxLayoutAlign="space-between center" formControlName="type">
+    <mat-radio-button *ngFor="let type of accountTypeOptions" class="ml-8"
+                      value="{{type}}">{{type.toUpperCase()}}</mat-radio-button>
+  </mat-radio-group>
+
   <mat-form-field>
     <mat-label>{{ 'description' | i18n }}</mat-label>
     <textarea matInput
               cdkTextareaAutosize
-              name="description"
+              maxlength="256"
               placeholder="{{ 'description' | i18n }}"
-              [(ngModel)]="description"
-              [disabled]="disabled"
+              formControlName="desc"
     >
     </textarea>
+  </mat-form-field>
+
+  <div class="avatar-section">
+    <mat-form-field>
+      <mat-label>{{ 'avatar' | i18n }}</mat-label>
+      <input matInput
+             placeholder="{{ 'enter_ipfs_hash' | i18n }}"
+             formControlName="avatar"
+      >
+    </mat-form-field>
+    <div class="avatar-type">
+      <img *ngIf="avatarImgSource" [src]="avatarImgSource" (load)="onImageLoaded()"  (error)="onImageError()" class="h-64 w-64 p-4">
+      <div *ngIf="isLoadingImage" class="loader"></div>
+    </div>
+  </div>
+
+  <mat-form-field>
+    <mat-label>{{ 'homepage' | i18n }}</mat-label>
+    <input matInput
+           minlength="3"
+           maxlength="100"
+           placeholder="{{ 'enter_url' | i18n }}"
+           formControlName="homepage"
+    >
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>{{ 'alias' | i18n }}</mat-label>
+    <input matInput
+           minlength="3"
+           maxlength="100"
+           placeholder="{{ 'alias' | i18n }}"
+           formControlName="alias"
+    >
   </mat-form-field>
 </div>
