--- a/web/angular-wallet/src/app/main/set-account-info/src44-description-form/src44-description-form.component.scss
+++ b/web/angular-wallet/src/app/main/set-account-info/src44-description-form/src44-description-form.component.scss
@@ -24,5 +24,47 @@
     border: 1px solid lightgray;
     padding: 4px;
   }
+
+  .avatar-section {
+    display: flex;
+    flex-direction: row;
+
+    mat-form-field {
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      width: 100%;
+    }
+
+    .avatar-type {
+      position: relative;
+      margin-left: 1rem;
+      border-radius: 4px;
+      border: 1px solid #888;
+    }
+
+    .loader {
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: #aaa;
+      width: 64px;
+      height: 64px;
+      opacity: 1;
+      animation: pulse 5s linear infinite;
+    }
+  }
+
+  @keyframes pulse {
+    0% {
+      opacity: 0.75;
+    }
+    50% {
+      opacity: 0.25;
+    }
+    100% {
+      opacity: 0.75;
+    }
+  }
 }
 
