--- a/web/angular-wallet/src/styles.scss
+++ b/web/angular-wallet/src/styles.scss
@@ -2,6 +2,7 @@
 @import "../node_modules/angular-notifier/styles.scss";
 @import "@fuse/scss/core";
 @import "app/app.theme";
+@import "~jsoneditor/dist/jsoneditor.min.css";
 
 $danger-color: #ff8080;
 $success-color: #00cc99;
