--- a/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.html
+++ b/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.html
@@ -27,7 +27,11 @@
       </mat-form-field>
 
       <ng-container *ngIf="formatType.value === 'src44'">
-        <app-src44-description-form [name]="name" [(description)]="description.src44"></app-src44-description-form>
+        <app-src44-description-form
+          [name]="name"
+          [(description)]="description.src44"
+          [disabled]="immutable"
+        ></app-src44-description-form>
       </ng-container>
       <ng-container *ngIf="formatType.value === 'json'">
         <app-json-description-form [(description)]="description.json"
