--- a/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
+++ b/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
@@ -2,11 +2,13 @@
 
   <!-- HEADER -->
   <div class="header accent p-24 h-160" fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-xs="row"
-    fxLayoutAlign.gt-xs="space-between center">
+       fxLayoutAlign.gt-xs="space-between center">
 
     <div fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-xs="column" fxLayoutAlign.gt-xs="center start">
       <div fxLayout="row" fxLayoutAlign="start center">
-        <a [routerLink]="['/dashboard']"><mat-icon class="secondary-text s-18">home</mat-icon></a>
+        <a [routerLink]="['/dashboard']">
+          <mat-icon class="secondary-text s-18">home</mat-icon>
+        </a>
         <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
         <a [routerLink]="['/accounts']" class="secondary-text">{{ 'accounts' | i18n }}</a>
         <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
@@ -21,14 +23,24 @@
 
   <div class=" p-24">
 
-    <div class="row account-details">
-      <div class="hashicon">
+    <div class="account-details">
+      <div class="avatar">
         <canvas #avatar></canvas>
+        <img *ngIf="avatarImgSrc" [src]="avatarImgSrc" alt="avatar-image" />
       </div>
-      <div class="details">
-        <h2>{{ account.name || account.accountRS }}</h2>
-        <h3>{{ account.account }}</h3>
-        <h4>{{ account.balanceNQT | amount:'planck' }}</h4>
+      <div class="description">
+        <div class="details">
+          <h2>{{ account.name || account.accountRS }}</h2>
+          <h3>{{ account.account }}</h3>
+          <h4>{{ account.balanceNQT | amount:'planck' }}</h4>
+        </div>
+        <div *ngIf="src44" class="src44">
+          <p>{{ src44.description }}</p>
+          <a *ngIf="src44.homePage" [href]="src44.homePage" class="homepage">
+            <mat-icon class="mr-8">link</mat-icon>
+            {{ 'homepage' | i18n }}
+          </a>
+        </div>
       </div>
     </div>
 
