feat: SRC44 for accounts completed, added token pagination

--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -40,7 +40,8 @@
       class="avatar-container"
       [routerLink]="['set-account-info']"
     >
-      <canvas #avatar></canvas>
+      <canvas *ngIf="!avatarImgSrc" #avatar></canvas>
+      <img *ngIf="avatarImgSrc" [src]="avatarImgSrc" alt="avatar-image" />
     </a>
   </div>
 
