--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
@@ -179,7 +179,13 @@ navbar {
 
         .avatar-container {
           cursor: pointer;
+          position: relative;
           filter: drop-shadow(0 0 4px black);
+          margin-top: 1rem;
+
+          img {
+            height: 100px;
+          }
 
           canvas {
             display: block;
