--- a/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.html
+++ b/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.html
@@ -97,6 +97,13 @@
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
 
+  <mat-paginator
+    #paginator
+    [pageSize]="10"
+    [pageSizeOptions]="[10, 20, 50]"
+    [showFirstLastButtons]="true"
+  >
+  </mat-paginator>
 
   <div *ngIf="dataSource.data.length === 0" class="text-center">
     <h2>{{'no_tokens_available'|i18n}}</h2>
